--- a/logstash/pipeline-main/11_zeek_logs.conf
+++ b/logstash/pipeline-main/11_zeek_logs.conf
@@ -609,6 +609,38 @@ filter {
       }
     }
 
+  } else if ([source] == "gquic") {
+    #############################################################################################################################
+    # gquic.log
+
+    dissect {
+      id => "dissect_zeek_gquic"
+      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+      mapping => {
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][version]}	%{[zeek_cols][server_name]}	%{[zeek_cols][user_agent]}	%{[zeek_cols][tag_count]}	%{[zeek_cols][cyu]}	%{[zeek_cols][cyutags]}"
+      }
+    }
+    if ("_dissectfailure" in [tags]) {
+      mutate {
+        id => "mutate_split_zeek_gquic"
+        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+        split => { "[message]" => "	" }
+      }
+      ruby {
+        id => "ruby_zip_zeek_gquic"
+        init => "$zeek_gquic_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'version', 'server_name', 'user_agent', 'tag_count', 'cyu', 'cyutags' ]"
+        code => "event.set('[zeek_cols]', $zeek_gquic_field_names.zip(event.get('[message]')).to_h)"
+      }
+    }
+
+    mutate {
+      id => "mutate_add_fields_zeek_gquic"
+      add_field => {
+        "[zeek_cols][proto]" => "udp"
+        "[zeek_cols][service]" => "quic"
+      }
+    }
+
   } else if ([source] == "http") {
     #############################################################################################################################
     # http.log
@@ -2346,6 +2378,64 @@ filter {
     if ([zeek_ftp][mime_type]) { mutate { id => "mutate_merge_zeek_ftp_filetype"
                                          merge => { "[zeek][filetype]" => "[zeek_ftp][mime_type]" } } }
 
+  } else if ([source] == "gquic") {
+    #############################################################################################################################
+    # gquic.log specific logic
+
+    if ([zeek_gquic][user_agent]) {
+      mutate { id => "mutate_merge_zeek_quic_useragent"
+               merge => { "[quic][useragent]" => "[zeek_gquic][user_agent]" } }
+      mutate {
+        id => "mutate_add_field_zeek_quic_useragentCnt"
+        add_field => {
+          "[quic][useragentCnt]" => "1"
+        }
+      }
+      dissect {
+        id => "mutate_convert_field_zeek_quic_useragentCnt"
+        convert_datatype => {
+          "[quic][useragentCnt]" => "int"
+        }
+      }
+    }
+
+    if ([zeek_gquic][server_name]) {
+      mutate { id => "mutate_merge_zeek_quic_host"
+               merge => { "[quic][host]" => "[zeek_gquic][server_name]" } }
+      mutate {
+        id => "mutate_add_field_zeek_quic_hostCnt"
+        add_field => {
+          "[quic][hostCnt]" => "1"
+        }
+      }
+      dissect {
+        id => "mutate_convert_field_zeek_quic_hostCnt"
+        convert_datatype => {
+          "[quic][hostCnt]" => "int"
+        }
+      }
+    }
+
+    if ([zeek_gquic][version]) {
+      ruby {
+        id => "ruby_zeek_set_quic_version"
+        code => "event.set('[quic][version]', 'Q' + event.get('[zeek_gquic][version]').rjust(3, '0'))"
+      }
+      mutate {
+        id => "mutate_add_field_zeek_quic_versionCnt"
+        add_field => {
+          "[quic][versionCnt]" => "1"
+        }
+      }
+      dissect {
+        id => "mutate_convert_field_zeek_quic_versionCnt"
+        convert_datatype => {
+          "[quic][versionCnt]" => "int"
+        }
+      }
+    }
+
+
   } else if ([source] == "http") {
     #############################################################################################################################
     # http.log specific logic
@@ -2381,10 +2471,20 @@ filter {
         }
       }
     }
-    if ([zeek_http][uri]) { mutate { id => "mutate_merge_zeek_http_uri"
-                                    merge => { "[http][uri]" => "[zeek_http][uri]" } } }
-    if ([zeek_http][referrer]) { mutate { id => "mutate_merge_zeek_http_referrer"
-                                         merge => { "[http][uri]" => "[zeek_http][referrer]" } } }
+    if ([zeek_http][uri]) {
+      if ([zeek_http][host]) {
+        mutate { id => "mutate_add_field_metadata_http_host_and_uri"
+                 add_field => { "[@metadata][http_uri]" => "%{[zeek_http][host]}%{[zeek_http][uri]}" } }
+        mutate { id => "mutate_merge_zeek_http_host_and_uri"
+                 merge => { "[http][uri]" => "[@metadata][http_uri]" } }
+      } else {
+        mutate { id => "mutate_merge_zeek_http_uri"
+                 merge => { "[http][uri]" => "[zeek_http][uri]" } }
+      }
+    } else if ([zeek_http][referrer]) {
+      mutate { id => "mutate_merge_zeek_http_referrer"
+      merge => { "[http][uri]" => "[zeek_http][referrer]" } }
+    }
     if ([http][uri]) {
       ruby {
         id => "ruby_zeek_http_uriCnt"
