tweaks to ISO for UI and STIG hardening

--- a/iso-build/config/includes.binary/install/preseed.cfg
+++ b/iso-build/config/includes.binary/install/preseed.cfg
@@ -101,12 +101,32 @@ d-i partman-auto/expert_recipe string          \
      2000 4000 6000  ext4                      \
        $defaultignore{ }                       \
        $lvmok{ }                               \
-       in_vg { main } lv_name{ audit }         \
+       in_vg { main } lv_name{ varlog }        \
+       method{ format }                        \
+       format{ }                               \
+       use_filesystem{ }                       \
+       filesystem{ ext4 }                      \
+       mountpoint{ /var/log }                  \
+     .                                         \
+     2000 4000 6000  ext4                      \
+       $defaultignore{ }                       \
+       $lvmok{ }                               \
+       in_vg { main } lv_name{ varlogaudit }   \
        method{ format }                        \
        format{ }                               \
        use_filesystem{ }                       \
        filesystem{ ext4 }                      \
        mountpoint{ /var/log/audit }            \
+     .                                         \
+     2000 4000 6000  ext4                      \
+       $defaultignore{ }                       \
+       $lvmok{ }                               \
+       in_vg { main } lv_name{ vartmp }        \
+       method{ format }                        \
+       format{ }                               \
+       use_filesystem{ }                       \
+       filesystem{ ext4 }                      \
+       mountpoint{ /var/tmp }                  \
      .                                         \
      2000 4000 6000  ext4                      \
        $defaultignore{ }                       \
