--- a/iso-build/config/includes.binary/install/preseed_base.cfg
+++ b/iso-build/config/includes.binary/install/preseed_base.cfg
@@ -33,4 +33,5 @@ d-i preseed/late_command string \
   in-target sed -i 's#^\(GRUB_DISTRIBUTOR=\).*$#\1"Hedgehog"#' /etc/default/grub; \
   in-target cp /usr/share/images/desktop-base/Malcolm_background.png /boot/grub; \
   in-target bash /usr/local/bin/preseed_late_user_config.sh; \
-  in-target grub-mkconfig -o /boot/grub/grub.cfg;
+  in-target grub-mkconfig -o /boot/grub/grub.cfg; \
+  in-target bash -c "(dpkg -s localepurge >/dev/null 2>&1) && (debconf-set-selections < /etc/localepurge-preseed.cfg) && dpkg-reconfigure localepurge && localepurge";
