--- a/iso-build/config/includes.binary/install/preseed_base.cfg
+++ b/iso-build/config/includes.binary/install/preseed_base.cfg
@@ -3,8 +3,18 @@
 d-i hw-detect/load_firmware boolean true
 d-i clock-setup/utc boolean true
 d-i time/zone string Universal
-d-i clock-setup/ntp boolean true
+d-i clock-setup/ntp boolean false
 d-i clock-setup/ntp-server string 0.debian.pool.ntp.org
+
+d-i localepurge/nopurge multiselect en, en_US, en_us.UTF-8, C.UTF-8
+d-i localepurge/use-dpkg-feature boolean false
+d-i localepurge/none_selected boolean false
+d-i localepurge/verbose boolean false
+d-i localepurge/dontbothernew boolean false
+d-i localepurge/quickndirtycalc boolean true
+d-i localepurge/mandelete boolean true
+d-i localepurge/showfreedspace boolean false
+d-i localepurge/remove_no note
 
 # d-i passwd/username string analyst
 # d-i passwd/user-fullname string analyst
