tweak location of clamd socket file

--- a/file-monitor/supervisord.conf
+++ b/file-monitor/supervisord.conf
@@ -30,6 +30,7 @@ command=/usr/local/bin/zeek-carve-monitor.py
   --malass-port %(ENV_MALASS_PORT)s
   --malass-limit %(ENV_MALASS_MAX_REQUESTS)s
   --clamav %(ENV_EXTRACTED_FILE_ENABLE_CLAMAV)s
+  --clamav-socket "%(ENV_CLAMD_SOCKET_FILE)s"
   --directory "%(ENV_ZEEK_EXTRACTOR_PATH)s"
   --zeek-log "%(ENV_ZEEK_LOG_DIRECTORY)s"
 user=monitor
@@ -44,7 +45,7 @@ stdout_logfile_maxbytes=0
 redirect_stderr=true
 
 [program:freshclam]
-command=/usr/bin/freshclam freshclam --config-file=/etc/clamav/freshclam.conf --daemon
+command=/usr/bin/freshclam freshclam --user monitor --config-file=/etc/clamav/freshclam.conf --daemon
 user=monitor
 autostart=%(ENV_EXTRACTED_FILE_ENABLE_FRESHCLAM)s
 autorestart=true
