add WISE views for new zeek fields, using new format to define most of them
https://molo.ch/wise#common-source-settings

--- a/logstash/pipeline-main/11_zeek_logs.conf
+++ b/logstash/pipeline-main/11_zeek_logs.conf
@@ -307,7 +307,7 @@ filter {
       id => "dissect_zeek_cip"
       # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
       mapping => {
-        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][service]}	%{[zeek_cols][status]}	%{[zeek_cols][tags]}"
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][cip_service]}	%{[zeek_cols][status]}	%{[zeek_cols][cip_tags]}"
       }
     }
     if ("_dissectfailure" in [tags]) {
@@ -318,7 +318,7 @@ filter {
       }
       ruby {
         id => "ruby_zip_zeek_cip"
-        init => "$zeek_cip_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'service', 'status', 'tags' ]"
+        init => "$zeek_cip_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'cip_service', 'status', 'cip_tags' ]"
         code => "event.set('[zeek_cols]', $zeek_cip_field_names.zip(event.get('[message]')).to_h)"
       }
     }
@@ -434,6 +434,8 @@ filter {
         code => "event.set('[zeek_cols]', $zeek_dhcp_field_names.zip(event.get('[message]')).to_h)"
       }
     }
+
+    # todo: handle mutiple DHCP uids
 
     if ((![zeek_cols][orig_p]) and (![zeek_cols][resp_p])) {
       mutate {
@@ -565,6 +567,8 @@ filter {
         code => "event.set('[zeek_cols]', $zeek_enip_field_names.zip(event.get('[message]')).to_h)"
       }
     }
+
+    # todo: translate enip options somehow?
 
     mutate {
       id => "mutate_add_fields_zeek_enip"
@@ -1102,6 +1106,8 @@ filter {
       }
     }
 
+    # todo: other mqtt logs?
+
     mutate {
       id => "mutate_add_fields_zeek_mqtt_connect"
       add_field => {
@@ -1264,6 +1270,8 @@ filter {
   } else if ([source] == "ntp") {
     #############################################################################################################################
     # ntp.log
+    # todo: https://docs.zeek.org/en/latest/scripts/base/protocols/ntp/main.zeek.html#type-NTP::Info
+    # see if we can trasnlate some of these fields (mode, etc.) from codes into something more meaningful
 
     dissect {
       id => "dissect_zeek_ntp"
@@ -1543,6 +1551,8 @@ filter {
         "[zeek_cols][service]" => "s7comm"
       }
     }
+
+    # todo: split up/assign parameter value and data_info value
 
   } else if ([source] == "signatures") {
     #############################################################################################################################
@@ -2022,6 +2032,8 @@ filter {
         "[zeek_cols][service]" => "tds"
       }
     }
+
+    # todo: split up/assign parameters field
 
   } else if ([source] == "tds_sql_batch") {
     #############################################################################################################################
