more work on ICS stuff

--- a/logstash/pipeline-main/11_zeek_logs.conf
+++ b/logstash/pipeline-main/11_zeek_logs.conf
@@ -370,7 +370,6 @@ filter {
     #############################################################################################################################
     # dhcp.log
     # https://docs.zeek.org/en/stable/scripts/base/protocols/dhcp/main.zeek.html#type-DHCP::Info
-    # todo: handle mutiple DHCP uids
 
     if ([@metadata][zeek_fields_bitmap] and [@metadata][zeek_fields_bitmap_version]) {
 
@@ -439,6 +438,15 @@ filter {
         init => "$zeek_dhcp_field_names = [ 'ts', 'uids', 'orig_h', 'resp_h', 'orig_l2_addr', 'host_name', 'client_fqdn', 'domain', 'requested_ip', 'assigned_ip', 'lease_time', 'client_message', 'server_message', 'msg_types', 'duration' ]"
         code => "event.set('[zeek_cols]', $zeek_dhcp_field_names.zip(event.get('[message]')).to_h)"
       }
+    }
+
+    if ([zeek_cols][uids]) and ([zeek_cols][uids] != '(empty)') and ([zeek_cols][uids] != '') {
+      mutate { id => "mutate_split_zeek_dhcp_uids"
+               split => { "[zeek_cols][uids]" => "," } }
+    }
+    if ([zeek_cols][uids] and [zeek_cols][uids][0]) {
+      mutate { id => "mutate_add_field_zeek_dhcp_uids"
+               add_field => { "[rootId]" => "%{[zeek_cols][uids][0]}" } }
     }
 
     if ((![zeek_cols][orig_p]) and (![zeek_cols][resp_p])) {
@@ -1293,7 +1301,6 @@ filter {
     #############################################################################################################################
     # ntp.log
     # https://docs.zeek.org/en/latest/scripts/base/protocols/ntp/main.zeek.html#type-NTP::Info
-    # todo: see if we can trasnlate some of these fields (mode, etc.) from codes into something more meaningful
 
     dissect {
       id => "dissect_zeek_ntp"
@@ -1549,7 +1556,6 @@ filter {
     #############################################################################################################################
     # s7comm.log
     # https://github.com/amzn/zeek-plugin-s7comm/blob/master/scripts/main.zeek
-    # todo: split up/assign parameter value and data_info value
 
     dissect {
       id => "dissect_zeek_s7comm"
@@ -3327,6 +3333,101 @@ filter {
     if ([zeek_notice][file_mime_type]) { mutate { id => "mutate_merge_zeek_notice_filetype"
                                                  merge => { "[zeek][filetype]" => "[zeek_notice][file_mime_type]" } } }
 
+  } else if ([source] == "ntp") {
+    #############################################################################################################################
+    # ntp.log specific logic
+
+    # map mode to string for readability
+    if ([zeek_ntp][mode]) {
+      translate {
+        id => "translate_zeek_ntp_mode_str"
+        field => "[zeek_ntp][mode]"
+        destination => "[zeek_ntp][mode_str]"
+        dictionary => {
+          "1" => "client"
+          "2" => "server"
+          "3" => "peer"
+          "4" => "broadcast/multicast"
+        }
+      }
+    }
+
+    # convert various data types
+    dissect {
+      id => "dissect_convert_datatype_zeek_ntp"
+      convert_datatype => {
+        "[zeek_ntp][mode]" => "int"
+        "[zeek_ntp][num_exts]" => "float"
+        "[zeek_ntp][poll]" => "float"
+        "[zeek_ntp][precision]" => "float"
+        "[zeek_ntp][root_delay]" => "float"
+        "[zeek_ntp][root_disp]" => "float"
+        "[zeek_ntp][version]" => "int"
+      }
+    }
+
+    # convert timestamps from UNIX
+    # ref_time: Time when the system clock was last set or correct.
+    if ([zeek_ntp][ref_time]) {
+      if ([zeek_ntp][ref_time] == "0.000000") {
+        mutate {
+          id => "mutate_remove_field_ntp_ref_time_zero"
+          remove_field => [ "[zeek_ntp][ref_time]" ]
+        }
+      } else {
+        date {
+          id => "date_zeek_ntp_ref_time"
+          match => [ "[zeek_ntp][ref_time]", "UNIX" ]
+          target => "[zeek_ntp][ref_time]"
+        }
+      }
+    }
+    # org_time: Time at the client when the request departed for the NTP server.
+    if ([zeek_ntp][org_time]) {
+      if ([zeek_ntp][org_time] == "0.000000") {
+        mutate {
+          id => "mutate_remove_field_ntp_org_time_zero"
+          remove_field => [ "[zeek_ntp][org_time]" ]
+        }
+      } else {
+        date {
+          id => "date_zeek_ntp_org_time"
+          match => [ "[zeek_ntp][org_time]", "UNIX" ]
+          target => "[zeek_ntp][org_time]"
+        }
+      }
+    }
+    # rec_time: Time at the server when the request arrived from the NTP client.
+    if ([zeek_ntp][rec_time]) {
+      if ([zeek_ntp][rec_time] == "0.000000") {
+        mutate {
+          id => "mutate_remove_field_ntp_rec_time_zero"
+          remove_field => [ "[zeek_ntp][rec_time]" ]
+        }
+      } else {
+        date {
+          id => "date_zeek_ntp_rec_time"
+          match => [ "[zeek_ntp][rec_time]", "UNIX" ]
+          target => "[zeek_ntp][rec_time]"
+        }
+      }
+    }
+    # xmt_time: Time at the server when the response departed for the NTP client.
+    if ([zeek_ntp][xmt_time]) {
+      if ([zeek_ntp][xmt_time] == "0.000000") {
+        mutate {
+          id => "mutate_remove_field_ntp_xmt_time_zero"
+          remove_field => [ "[zeek_ntp][xmt_time]" ]
+        }
+      } else {
+        date {
+          id => "date_zeek_ntp_xmt_time"
+          match => [ "[zeek_ntp][xmt_time]", "UNIX" ]
+          target => "[zeek_ntp][xmt_time]"
+        }
+      }
+    }
+
   } else if ([source] == "pe") {
     #############################################################################################################################
     # pe.log specific logic
@@ -3449,6 +3550,39 @@ filter {
       if ([@metadata][radius_geo] and [@metadata][radius_geo][country_code2]) {
         mutate { id => "mutate_merge_zeek_radius_endpoint_geo"
                  merge => { "[radius][endpointGEO]" => "[@metadata][radius_geo][country_code2]" } }
+      }
+    }
+
+  } else if ([source] == "s7comm") {
+    #############################################################################################################################
+    # s7comm.log specific logic
+
+    if ([zeek_s7comm][parameter]) {
+      ruby {
+        id => "ruby_zeek_s7comm_parse_parameter"
+        code => "
+          parameterHash = event.get('[zeek_s7comm][parameter]').split(',').each_with_object({}) do |a, hash|
+            key,value = a.split(/\s*=\s*/)
+            hash[key] = value
+          end
+          event.set('[zeek_s7comm][parameters]', parameterHash)"
+      }
+      mutate { id => "mutate_split_field_s7comm_parameter"
+               split => { "[zeek_s7comm][parameter]" => "," } }
+    }
+
+    if ([zeek_s7comm][data_info] == "Null") {
+      mutate { id => "mutate_remove_field_s7comm_data_info_Null"
+               remove_field => [ "[zeek_s7comm][data_info]" ] }
+    } else if ([zeek_s7comm][data_info]) {
+      mutate { id => "mutate_split_field_s7comm_data_info"
+               split => { "[zeek_s7comm][data_info]" => "," } }
+    }
+
+    dissect {
+      id => "dissect_convert_datatype_zeek_s7comm_item_count"
+      convert_datatype => {
+        "[zeek_s7comm][item_count]" => "int"
       }
     }
 
